# ravnar

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  Dockerfile  README.md  config-docker.yml  mkdocs.yml  pyproject.toml
.github/actions/patch-helm-chart/: action.yml
.github/actions/setup-env/: action.yml
.github/actions/workflow-metadata/: action.yml
.github/workflows/: docker_build.yml  docker_cleanup.yml  helm_build.yml  lint.yml  pypi_build.yml  test.yml
docs/: architecture.md  deploy.md
docs/references/: cli.md  config.md  helm-chart.md  python_api.md  rest_api.md
docs/tools/: mise.toml
docs/tutorials/: authentication.py
helm/hrafnar-chart/: Chart.yaml  values.yaml
helm/hrafnar-chart/templates/: _validate.tpl  hrafnar-configmap.yaml  hrafnar-deployment.yaml  hrafnar-ingress.yaml  persistent-file-storage-pvc.yaml  postgres-statefulset.yaml
helm/ravnar/: Chart.yaml  values.schema.json  values.yaml
helm/ravnar/templates/: _env.tpl  _helpers.tpl  postgres-secret.yaml  postgres-service.yaml  ravnar-service.yaml
scripts/: api_e2e.py
scripts/docs/: gen_files.py  macros.py
src/_ravnar/: __init__.py  ag_ui_compatibilities.py  ag_ui_input_content_compat.py  agents.py  authenticators.py  config.py  core.py  database.py  docs.py  events.py  file_storage.py  mixin.py  observability.py  orm.py  utils.py
src/_ravnar/api/: __init__.py  agents.py  files.py  threads.py
src/_ravnar/schema/: __init__.py  api.py  misc.py
src/ravnar/: __init__.py  _cli.py  _utils.py  agents.py  authenticators.py
tests/: conftest.py  test_authenticators.py  test_config.py  test_events.py  test_events_cases.py  utils.py
tests/api/: test_files.py  test_threads.py
